@@ -1,5 +1,7 @@
 DIST deblob-4.0 129952 SHA256 c3d8e9a9728d5c1fc11b1112f5343b14e46a8cf2880e10399a840bc94b6e2ad3 SHA512 055205394487dbc0022f9531fb76d0be51ca3ec4e119232cc0972790d1532c680e1367eb36a9f40529f0ab1d76f64240b1e8a07cb02d3605d594c06e3547f1bb WHIRLPOOL db32b66231e552ac6e3651152eb2b3212ef0863842cd352bd2f1b1080b9ea5543f1f7ed0e7958a9f4b115559233dc1817560e896c789378ea7b68b527b721ca8
+DIST deblob-4.1 130695 SHA256 2888a5a3b5e8e9ec242e4d702582fa1d739a1274fcd94643a9fb3516a210a8a7 SHA512 b861b9b53f9295e5e993784031ce57cf8cddc418184ec00c28ed92c9e7660406e0ede581a93d0def36e7847b8e068c8ca6c4dfdd65c15cb174d6c5803c16214a WHIRLPOOL b90f55dd8702eb254968ed7689b50859833ed362e9aa1720ade96aa1f6f84e8f90f5d1eee034c8535e8bf767c0b5f8b0bc559219e8d81d4c6ed53bd5cfe5e65e
 DIST deblob-check-4.0 670921 SHA256 042b511913187672d9a0512765e662ba5d4283812ebebf424f778eb08fa359bc SHA512 a27e3530cd3028041445cf8c5f49ad7827a7cf2b511de28851d2b09c28347cf2be667a7494bd698939c007fb77595699c1f61fb76249ae87658e1d12e855d2a1 WHIRLPOOL 953d8e6eed10971ed67a4573449b9a536ad693a2130153a6fc7cc9ea3e2daea21ca002c8df80126f7e318f75bec82c3f6e99fe43155817e2e2a52b5949dc5d2d
+DIST deblob-check-4.1 674781 SHA256 54aa33e23a31ead6f982b830be86003c306b88f0d0a9f96c7dc66fe7cd274acb SHA512 51fe9d70d723992aaf70f8bfcfcc12ecfedd7a039402ddae07858fb087693b00cd80d1e0e1a5053e049f2a2b8c58ed23e4598e2dae902c4999999c08bc2eeb33 WHIRLPOOL d2c22280e12863793f8e866b126be53ee10d564373addfe9399b2afe22dd7584513c050f334ea08e6d63dd27a1574f2754456bad9d0a42e8c8d9995eec27aed0
 DIST genpatches-3.18-13.base.tar.xz 327876 SHA256 a19044798e6bd059d9c42ca97c6b73c6ad95efa9d8a475598350b3d5f5383955 SHA512 99964f90ab24cea9c05fb82fd7beb62d0309767d165d3ade8f2976fb1bc4e83070e59381524731006015e804032ba9672b1308018fb21b6489726fffd4aacbd4 WHIRLPOOL 29d33dfa0a3de8ee0f429c975ac4d2fb8c73d24727b0a9ee597f3eedbc973430bc89145b37f40f322106f6f407b4ebf361eb510a649e47ac62622ab211c3c0e6
 DIST genpatches-3.18-13.experimental.tar.xz 61620 SHA256 4aa5c2ca964a8315f9640d8f88c62274cf89e83aaa38b3935e1eefbec9b38097 SHA512 9073feb943d5dde1c7096bb5d6528f5f9150d2b61a4f9d25da5c5d6d7d9e2720dc99c0774fa1a227cdd02b8457ef8bd43cdecf14c215bfc83b11a3a5e5967bd1 WHIRLPOOL 4add10891a715fb1666b5502b7ddfe8dad8edfd9db51dc57ca7475aa324f600370c6901940dfd382fdf12a8a9ef0b266779515f38de0b41370538caba1c3221f
 DIST genpatches-3.18-13.extras.tar.xz 16188 SHA256 f2e51800f79c814199bcbc9911595b2998afef59a94b931a30c6ad88bba47eb2 SHA512 fe5afdbaf6c48757d2e289986346052068da1b614db58606107ec2736debe22aff55c190050340e7716f39f30943a154a2239096f167f2831d50dc0a94c5e12b WHIRLPOOL 28c4107ca46f5d7782609c7ed1b2789bc5bd1a6b1b5d339cf7aae32d5234a2c0c8da60d93656f260b56cfed4731b9a2b6dec3f81fd1d6445cd828cc4230e5b9c
@@ -15,13 +17,18 @@ DIST genpatches-4.0-6.extras.tar.xz 16280 SHA256 205c87c3d133a57d6ca42e2ce107cf6
 DIST genpatches-4.0-7.base.tar.xz 159536 SHA256 9d1e84cb5133489f76aa3ee4ffdc6a28331bed0c6557e383bdf288ec9461ff3c SHA512 49f29bc5b8d0953431dbd1c2c0b5fa0ae0eaad6ed744cddc5e8eeb3a6dc7aeb2231d9f491149fd0e9a4a9c10bfd336746a0b544b96d9212bc401091ee586eb46 WHIRLPOOL 355dfcdf5eb508cd840e506b32f3a9a39ef885bfc605b271574cc906492ad7a82c3f3511bbc519a912c56ad2cd0ab11d51a45602f20b03bc6441a11adc53d9d1
 DIST genpatches-4.0-7.experimental.tar.xz 61636 SHA256 419952353e98ed36dcdb9a45fe73b52449ec6b6d969dbf228f4dfc2da880f261 SHA512 1dcb8ede976b65304f3550aa55fb5cd0881861bc3507658f3e1927754ec37956e656ff053d546e5edd4f4ba63fbeca50f4a5c766229d5d05e5a69a4f2002f8b4 WHIRLPOOL 881f738f577ac15b977e3d3fa7e2abae427df196a0b33e96bb457ba36118e912e84bb8e36ee0baa67ab92ccfbffdcc2265cbae3034d618e25ab9b25db0791388
 DIST genpatches-4.0-7.extras.tar.xz 16276 SHA256 911ccb197f2c9514d8b4eacbdb7c059d709f64cb97632eae85cda99d61596ba4 SHA512 ce94b88735fde37b1337f111c91da0610b14b22ce5ac68bb082170acf23b8875cc1d2e7bc8354959a91bcbf10dee9fdd81d0cd173e21e8bd8d6f2ba157a737d9 WHIRLPOOL b8d32b09e5b9ec7af8307398fef31f5569c738dfdfc1832060e998f9fb5baa31cbb84eadab28b82d50fb7e6acbb381c55271128de4c5bc14febbb7dc4b1d1534
+DIST genpatches-4.1-6.base.tar.xz 27392 SHA256 0aa8e2699cdfc6848f71be79462522055ee725bc59899ec7aa27c2a952f3140f SHA512 1ce26a0ff4548cc5170e93b63472a553657ca7cecc3fcf86e247bcb107bc7493e77cf0497285fb9d03c900faa0fd83c9931a72e819811908294cf9a29cff0770 WHIRLPOOL 9c37aa46e069a86fa25d14e7cee867d504f9eb089bdc2ccdb1c4076adc06f1d954ba4bd5f535e476a6876866d421a82bfcd1dd30bd921d60e2fcf73245ad25b7
+DIST genpatches-4.1-6.experimental.tar.xz 157852 SHA256 17c0f509fc7eb8c716cb21e41bf520271425af0bd5648137bcbd57e27ad6aa0b SHA512 e1ccc0fbb538daa3ab8e48eddbe53d7dc7aa2d274dc76f07661c473a1d9fab90cbe1a9fae1d5cc026521c50d35b5fde144e0902edecba0a5d9c3365378a13404 WHIRLPOOL 2df0834d8fb9c7bcaa6f329df5f65b4869a1a5be9de76bd1ecaeed3fc74b473cd6f6a397310d7eb0cd9cdd01cb071e1a5934624ba17888ddfe0f8555d80ad5a8
+DIST genpatches-4.1-6.extras.tar.xz 16184 SHA256 6f3fe173cdabe9424fbbba358d45946894548b3d6dbaa09aa1643090b80a6833 SHA512 79cea07c2a457f275caa1aea8d10ac8a20341359a29e20f1ab2fbf625b6d8ebe6adf44fa9968241ade279e943e21f08a9c9c18b0d4242181a42c75184d37e197 WHIRLPOOL 731aebecdb223e423d7d6e70020786881d12a20ff0bf399c96496b4db91ebb587788cddb9a0f1b91a6d1c0ca32acca6128d3d32e696dbf505951e41923d1c138
 DIST linux-3.18.tar.xz 80934708 SHA256 becc413cc9e6d7f5cc52a3ce66d65c3725bc1d1cc1001f4ce6c32b69eb188cbd SHA512 2f0b72466e9bc538a675738aa416573d41bbbd7e3e2ffd5b5b127afde609ebc278cec5a3c37e73479607e957c13f1b4ed9782a3795e0dcc2cf8e550228594009 WHIRLPOOL 81634af631b7d30ccd1f4798f96f44d9aa0ba6609b73f2747eb6aebaf7a99487fb2dbd45767605186182533cb222bfd9236e8dd5e11a04fdb67c211e4e0a91d6
 DIST linux-3.19.tar.xz 81688872 SHA256 be42511fe5321012bb4a2009167ce56a9e5fe362b4af43e8c371b3666859806c SHA512 d77bfd9b1cd524ac50bb5a93808955be2f9bcd2ec0badcc8aa6a63401e212f891fd14bd27c6441174ba5d70ab875b9e76c7ebc95f046e31aff1d40790d30351c WHIRLPOOL 76a17bb3d7c30cee19e135940f3607106efb2984061f946f0da9a2ddd602dc1bfc7e6f8970975cfb113d13f23a75415f39938204af266e2819e7a239b6f46778
 DIST linux-4.0.tar.xz 82313052 SHA256 0f2f7d44979bc8f71c4fc5d3308c03499c26a824dd311fdf6eef4dee0d7d5991 SHA512 ce13d2c1c17908fd9a4aa42bb6348a0cb13dd22e560bd54c61b8bfdf62726d6095f130c59177a2fe4793b7dc399481bf10d3556d1d571616000f180304e5a995 WHIRLPOOL c481256e23dc82209942d4f2fc9a94aa7fc4c3c69b05eaa041a58ca4bdc5781274ec4c49d597ccf94b634d61418ec578d20a6569c6c7052b4d3cf33611c99001
+DIST linux-4.1.tar.xz 83017828 SHA256 caf51f085aac1e1cea4d00dbbf3093ead07b551fc07b31b2a989c05f8ea72d9f SHA512 168ef84a4e67619f9f53f3574e438542a5747f9b43443363cb83597fcdac9f40d201625c66e375a23226745eaada9176eb006ca023613cec089349e91751f3c0 WHIRLPOOL 85fcfdb67ea7f865272a85d3b4c3ec1f5a1267f4664bf073c562bb3875e9d96ad68486259d8866a9aced98c95de16840ec531d89745aec75b7315a64ebe650b8
 EBUILD gentoo-sources-3.18.11.ebuild 712 SHA256 009e2690cab31bfa1b643ad00c405a42e0366ad8dbe4d9e0a7e8f99b29ae8812 SHA512 f108999da87efd552d5ec7ba64c26dcd5f53fecb9e64e8f7c4eba0da6f2c1d0e9d8d30d0fc13c35a110060729a416e39f9c129deba242040d659415b24901bbd WHIRLPOOL 08cefe92e30d6a43a7139f3b8c2028f6ec1fe9c510c7b1660f3938a27c41680514ff214df0b3e1194e402ea63af1e744779186305484885793cfb106f3046e9f
 EBUILD gentoo-sources-3.19.6.ebuild 816 SHA256 271512adacede62d200a7cd8dc9ad14cdadfee32b2158f9fd2b8aa7ebd2447c2 SHA512 8cbfe2f92a0f7426df1d5c73cd14367d7de553b6e49aafe73198480c4adc02844d5e9a2e3dc02cce9aceab4302fd837b42d796d7e0fd2475fac4cd6d8b647bcd WHIRLPOOL 89c60a4e16cee90190dd1b2f65a2379d816bf7e40b54c612c445e418e5412bc9482eee1ca3109a243d6fa2a78ec8bb50398b988c22b4e8e487b5418d5de07592
 EBUILD gentoo-sources-4.0.1.ebuild 711 SHA256 9435de7363c4fbb93a2a3d2861931a5be5350c1acaf58128223038eff5ca3ea3 SHA512 0ac92117fbe9d6d0209d09473231beb5617b555940304fe55efb734dc85ac9b52199562f09beee4c62491d6e929b6047ea32b09064f11d003f4da97402ee1d93 WHIRLPOOL cbf55d2521dd3212545f9690db597a5aa593f4928e6c38afb0fb2492a80fecb4e6c0fd13494847b0d436b5c2ac315dcd03d84696cd43292cd96bae307727c7bd
 EBUILD gentoo-sources-4.0.4.ebuild 711 SHA256 b962ca2cb9cab8a8a33be5113f8a99bdaf49417769559bfd529b4cfc8015a99f SHA512 bd3b25106517d7f0d7eff3d8d6ad0528c296a69f11e734f2a73589bac906b4f5a60b9f674416abb32e09b8596604bd29b393d0f66887a098457b09f32df7fe09 WHIRLPOOL 7c73efae39d676f3c5a287f40e20bbe7c852517786ad0bca4ff670381b385bd53a48f61ef59c7e8ed3fbe024a04a7ea16924b518bad1f86e431920b89875cc74
 EBUILD gentoo-sources-4.0.5.ebuild 711 SHA256 0e446686c6b4634bf01a7d62d9b3fe837819912cb0948c4006f95cf0c8eface6 SHA512 be56ee7274bf0bfcb33a413b71879c8869696e43ba54d0618b28b653644a39cc298b40e915ffd014d7059709dd338ddcb8b944251c68c3a5a0a2f41bbaa81947 WHIRLPOOL 64a96fcca7246cd840d31d0230a85a4d500dbbea6bdb4e19d00a55f7c4f4cf218bda84812ed843bc4f1a7cf71abe558bda919100e70e3a6dd5de33141f1948c8
-MISC ChangeLog 777 SHA256 4c076a6576cb46436c6f69d2c32ef96982f350481efe9d2e83456fb7a337026c SHA512 c315742225527f4a5086e099f2b65920d58af9908ecb178beca5e22fb5431753b0c5c2a0981ac53551c59ac519184173623f99c1c18b4f9af2b452ab6b3601fa WHIRLPOOL cad57515d38b55979ed5cfd8a40b22cf75b2e4a19f07eb9f231022b8e4fac92a32687a4509bbdecfa227b47ddc79ab710e58cc1f11c025e8ea97ce7c71263378
-MISC metadata.xml 782 SHA256 57e7c9d3eca72be16becea5b3da4eb56fb571b6e223ed64c1cb3a295d88a4e8f SHA512 e9811595421fdb215fe423865e0ea8c730b64066dceb24c5ae2833a367681da3102fa96cbf45547f253d32cd2f1aad06e5c7f4fbe59c63e4e7c2c9040c50c0f9 WHIRLPOOL a23d4ac19fe926cfd6bc085b7388c71487b515a65f5307e67ccf37b07febb09b82126ab785df45d583a90f2b79d1c32a2e37194afcf461af4295e6c151a04f9e
+EBUILD gentoo-sources-4.1.2.ebuild 739 SHA256 70162c542414910113921dd5358f633abc29ddcd118bc0ad6bf0baccf5553cf0 SHA512 f2390caa82b7a9b657effecd680be2dc98376df833697bc9546908e1621cf4c3356dae2f67c81b78c0758c567f09adeff28d723572ae86a88b7c1affa133dcbc WHIRLPOOL fdfdf61de33e7bf5b94f374cdc71ab9502f4cc868a388f2f0c185b171ca8ee77e861af00256133b201c775c058497b0c93c6fa063c95c2ebc1ff8f523661fc78
+MISC ChangeLog 964 SHA256 6ec4d24aad68dddbceae72a50b1c817ace1d0fdd00e34a30d786799949e10a48 SHA512 7be71cfdaff07d92d7146e91ec43d0f1664952549e63c58cdcdb82dedcba62f0a1f62b69320d7c1eeaa63bc09fe9efcf6a7df98de9c13583d0b0622b24a75bf6 WHIRLPOOL bc207a220c73c1261e79a2023cc7a8c24cdae00e86c6cfe6a0d7242ea16fa0bf3f0830dbbeeaf60c80e31600ee9125f691889fb58fed818afa37302ab13fbc39
+MISC metadata.xml 881 SHA256 57c527cebef58a106f98afe341b3b6177cfaa29b50dd05131b85bfb090b8aaf7 SHA512 8b5d2e201f7b06fadfa0c384ab7afa1b41f97343780a6da48addcea33a413f415a817a4adad3f382ddf74154c14cbb99a38aadb292dbe47331ede4b72ff6516a WHIRLPOOL 66d14065428c2a1058de4af2de708425ab7853288e9c2f24e843ffa4ed1011189a8579fd6bd58e92730e2eeb4d9ec5f2290db6f85202e9cb47eb0e346f244861
